--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/nastanford/PracticeNode/issues"
   },
-  "homepage": "https://github.com/nastanford/PracticeNode#readme"
+  "homepage": "https://github.com/nastanford/PracticeNode#readme",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
+    "reload": "^2.2.2",
+    "socket.io": "^2.0.3"
+  }
 }
